--- a/Fig4/SICK_Fig4_unenriched_trendplots.Rmd
+++ b/Fig4/SICK_Fig4_unenriched_trendplots.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Protein Abundance Timecourse Analysis (Z-scored, Outliers Removed)"
-author: "Your Name"
-date: "`r Sys.Date()`"
+author: "M. Foster"
 output: html_document
 ---
 
